--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
-.App-logo {
+h1 {
+	font-family: "Bigelow Rules";
+	font-size: 72px;
+	color: #0ccac4;
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +41,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
